// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Button renders action button containedWarning 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-containedRedButton-2 MuiButton-contained MuiButton-disableElevation"
  disabled={false}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    containedWarning
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Action Button renders action button outlinedWarning 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-outlinedRedButton-3 MuiButton-outlined MuiButton-disableElevation"
  disabled={false}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    outlinedWarning
  </span>
</button>
`;

exports[`Action Button renders action button primaryContained 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-regularButton-1 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
  disabled={false}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    primaryContained
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Action Button renders action button secondaryOutlined 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-regularButton-1 MuiButton-outlined MuiButton-disableElevation"
  disabled={false}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    secondaryOutlined
  </span>
</button>
`;
